# HyperBook

./: CMakeLists.txt  README.md  class_diagramm.html
class_diagramm/: class_diagramm.html
docs/: README.md  to_do.md
example_projects/empty_project/: project_tree.txt
example_projects/patterns_proj/: project_tree.txt
example_projects/patterns_proj/1018460467/: 2134568492.txt  all_contents.txt
example_projects/patterns_proj/1161942230/: 1913243194.txt  all_contents.txt
example_projects/patterns_proj/1255679109/: 339760823.txt  all_contents.txt
example_projects/patterns_proj/1640577338/: 1129287486.txt  all_contents.txt
example_projects/patterns_proj/1650528664/: 220892228.txt  all_contents.txt
example_projects/patterns_proj/1856433597/: 72878773.txt  all_contents.txt
example_projects/patterns_proj/1856886450/: 1949007650.txt  all_contents.txt
example_projects/text_sources/: adapter.txt  bridge.txt  builder.txt  factory.txt  generating_patterns.txt  structural_patterns.txt
headers/: Application.h  Board.h  BoardManager.h  BoardTree.h  BoardVisualizer.h  ConsoleInterface.h  ConsoleVisualizer.h  ConsoleVisualizerMessages.h  Content.h  Project.h  ProjectManager.h  ProjectVisualizer.h  TextContent.h  UserInterface.h
headers/Board/: Board.h  BoardManager.h  BoardTree.h
headers/ConsoleVisInt/: ConsoleInterface.h  ConsoleInterfaceMessages.h  ConsoleVisualizer.h  ConsoleVisualizerMessages.h
headers/Content/: TextContent.h
headers/FileVisualizer/: FileVisualizer.h  FileVisualizerConst.h
headers/InnerStructure/: Application.h  CommandHandler.h  CommandHandlerErrorMessages.h  Project.h  ProjectLoader.h  ProjectLoaderMessages.h  ProjectManager.h  UserInterface.h
headers/Interfaces/: BoardVisualizer.h  ProjectVisualizer.h
sources/: Application.cpp  Board.cpp  BoardManager.cpp  BoardTree.cpp  ConsoleInterface.cpp  ConsoleVisualizer.cpp  Project.cpp  ProjectManager.cpp  TextContent.cpp  main.cpp
sources/BoardSources/: Board.cpp  BoardManager.cpp  BoardTree.cpp
sources/ConsoleVisInt/: ConsoleInterface.cpp  ConsoleVisualizer.cpp
sources/Content/: TextContent.cpp
sources/FileVisualizer/: FileVisualizer.cpp
sources/InnerStructure/: Application.cpp  CommandHandler.cpp  Project.cpp  ProjectLoader.cpp  ProjectManager.cpp
sources/Scripts/: clean_directory.sh  create_file_listing_files.sh  create_nested_folder.sh  delete_file_listing_files.sh
styles/: ConsoleVisualizerStyles.h
